--- a/style.css
+++ b/style.css
@@ -3,3 +3,55 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.container {
+  margin: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.container hr {
+  width: 10%;
+}
+
+.books {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  width: 50%;
+  border: 2px solid black;
+}
+
+.books div {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  align-items: center;
+  width: 100%;
+}
+
+.books div:nth-child(odd) {
+  background-color: #d2d2d2;
+}
+
+.books div:nth-child(even) {
+  background-color: white;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+  gap: 5px;
+}
+
+input,
+button {
+  padding: 5px;
+}
+
+button {
+  align-self: flex-end;
+}
