--- a/style.css
+++ b/style.css
@@ -55,3 +55,28 @@ button {
 button {
   align-self: flex-end;
 }
+
+header {
+display: flex;
+justify-content: center;
+}
+
+.navigator {
+  display: flex;
+  width: 95%;
+  justify-content: space-between;
+  /* margin: 10px 5%;  */
+  padding: 15px;
+  margin-top: 5px;
+  border: 1px solid black;
+}
+.navigator ul {
+  list-style: none;
+  display: flex; 
+  }
+
+  .navigator li {
+    border-right: 1px solid black;
+    background-color: gray;
+    padding: 5px 10px;
+  }
