--- a/style.css
+++ b/style.css
@@ -4,12 +4,80 @@
   box-sizing: border-box;
 }
 
+.hide {
+  display: none !important;
+}
+
+.active {
+  color: rgb(152, 152, 248) !important;
+}
+
+.title {
+  font-size: 2.5em !important;
+}
+
+header {
+  padding: 5px 1%;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+footer div {
+  margin: 10px 1%;
+  padding: 15px;
+  border: 1px solid black;
+}
+
+.navigator {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 0;
+  margin-top: 5px;
+  border: 1px solid black;
+}
+
+.navigator h3 {
+  margin-left: 2%;
+}
+
+.navigator ul {
+  list-style: none;
+  display: flex;
+  column-gap: 10px;
+}
+
+.navigator li {
+  border-right: 1px solid black;
+  padding: 4px 10px;
+}
+
+.navigator a {
+  text-decoration: none;
+  color: black;
+}
+
+.navigator a:hover {
+  color: rgb(144, 182, 238);
+}
+
+.date {
+  margin-top: 10px;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+
 .container {
-  margin: 100px;
+  margin: 30px 1% 0 1%;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 20px;
+  padding-bottom: 0;
 }
 
 .container hr {
@@ -20,7 +88,7 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
-  width: 50%;
+  width: 100%;
   border: 2px solid black;
 }
 
@@ -41,42 +109,38 @@
 }
 
 form {
+  margin-top: 30px;
   display: flex;
   flex-direction: column;
-  width: 25%;
-  gap: 5px;
+  width: 40%;
+  row-gap: 20px;
 }
 
-input,
-button {
-  padding: 5px;
+input {
+  padding: 10px;
 }
 
 button {
   align-self: flex-end;
+  padding: 5px 10px;
 }
 
-header {
-display: flex;
-justify-content: center;
-}
-
-.navigator {
+.contact-details {
   display: flex;
-  width: 95%;
-  justify-content: space-between;
-  /* margin: 10px 5%;  */
-  padding: 15px;
-  margin-top: 5px;
-  border: 1px solid black;
+  flex-direction: column;
+  align-items: center;
 }
-.navigator ul {
-  list-style: none;
-  display: flex; 
-  }
 
-  .navigator li {
-    border-right: 1px solid black;
-    background-color: gray;
-    padding: 5px 10px;
-  }
+.contact-details p {
+  margin-top: 30px;
+  font-size: 1.4em;
+}
+
+.contact-details ul {
+  display: flex;
+  flex-direction: column;
+  width: 34%;
+  row-gap: 10px;
+  margin-top: 20px;
+  font-size: 1.1em;
+}
